--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "test": "jest"
   },
   "dependencies": {
-    "express": "^4.17.1",
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
     "jest": "^24.9.0",
     "supertest": "^4.0.2"
   }
